--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
-<!--Navigation or menu bar-->
+    <!--Navigation or menu bar-->
     <div class="navbar">
         <div class="content left">
             Header Logo
@@ -20,7 +21,7 @@
             </ul>
         </div>
     </div>
-<!--head banner section-->
+    <!--head banner section-->
     <div class="header">
         <div class="banner-text">
             <h1>This website is awesome</h1>
@@ -30,7 +31,7 @@
             <button>Sign up</button>
         </div>
     </div>
-<!--Random information section-->
+    <!--Random information section-->
     <div class="info">
         <h2>Some random information</h2>
         <div class="image-cont">
@@ -44,7 +45,7 @@
                 <p>this is some subtext under an illustration or image</p>
         </div>
     </div>
-<!--Testimonials section-->
+    <!--Testimonials section-->
     <div class="testimony">
         <div class="test-cont">
             This is an inspiring quote, or a testimonial form a customer. Maybe its just filling up space, or 
@@ -54,7 +55,7 @@
             -Thor, God of Thunder
         </div>
     </div>
-<!--Call to action section-->
+    <!--Call to action section-->
     <div class="call-to-action">
         <div class="call-text">
             <h1>Call to action! It's time!</h1>
@@ -62,7 +63,7 @@
             <button>Sign up</button>
         </div>
     </div>
-<!--Footer section-->
+    <!--Footer section-->
     <div class="footer">
         copyright &copy; The Odin Project 2021
     </div>
