--- a/index.html
+++ b/index.html
@@ -8,27 +8,30 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <!--Navigation or menu bar-->
-    <div class="navbar">
-        <div class="content left">
-            Header Logo
+    <div class="header-section">
+        <!--Navigation or menu bar-->
+        <div class="navbar">
+            <div class="content left">
+                Header Logo
+            </div>
+            <div class="content right">
+                <ul>
+                    <a href="#">header link one</a>
+                    <a href="#">header link two</a>
+                    <a href="#">header link three</a>
+                </ul>
+            </div>
         </div>
-        <div class="content right">
-            <ul>
-                <a href="#">header link one</a>
-                <a href="#">header link two</a>
-                <a href="#">header link three</a>
-            </ul>
-        </div>
-    </div>
-    <!--head banner section-->
-    <div class="header">
-        <div class="banner-text">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title.
-                It's a small font and the color is lower contrast
-            </p>
-            <button>Sign up</button>
+        <!--head banner section-->
+        <div class="header">
+            <div class="banner-text">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title.
+                    It's a small font and the color is lower contrast
+                </p>
+                <button>Sign up</button>
+            </div>
+            <img src="" alt="header image">
         </div>
     </div>
     <!--Random information section-->
