--- a/index.html
+++ b/index.html
@@ -37,33 +37,39 @@
     <!--Random information section-->
     <div class="info">
         <h2>Some random information</h2>
-        <div class="image-cont">
-            <img src="" alt="image one">
-                <p>this is some subtext under an illustration or image</p>
-            <img src="" alt="image two">
-                <p>this is some subtext under an illustration or image</p>
-            <img src="" alt="image three">
-                <p>this is some subtext under an illustration or image</p>
-            <img src="" alt="image four">
-                <p>this is some subtext under an illustration or image</p>
-        </div>
+        
+            <div class="image-cont">
+                <p><img src="./images/bugger.jpg" alt="image one"><br>
+                this is some subtext under an illustration or image</p>
+                <p><img src="./images/crisps.jpg" alt="image two"><br>
+                this is some subtext under an illustration or image</p>
+                <p><img src="./images/fish-fillet.jpg" alt="image three"><br>
+                this is some subtext under an illustration or image</p>
+                <p><img src="./images/pizza.jpg" alt="image four"><br>
+                this is some subtext under an illustration or image</p>
+            </div>
+        
     </div>
     <!--Testimonials section-->
     <div class="testimony">
-        <div class="test-cont">
-            This is an inspiring quote, or a testimonial form a customer. Maybe its just filling up space, or 
-            maybe people will actually read it. Who knows? All i know is that is looks nice.
-        </div>
-        <div class="author">
-            -Thor, God of Thunder
+        <div class="content">
+            <div class="test-cont">
+                This is an inspiring quote, or a testimonial form a customer. Maybe its just filling up space, or 
+                maybe people will actually read it. Who knows? All i know is that is looks nice.
+            </div>
+            <div class="author">
+                -Thor, God of Thunder
+            </div>
         </div>
     </div>
     <!--Call to action section-->
     <div class="call-to-action">
-        <div class="call-text">
-            <h1>Call to action! It's time!</h1>
-            <p>sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+        <div class="call-content">
+            <div class="call-text">
+                <p><strong>Call to action! It's time!</strong><br>
+                    sign up for our product by clicking that button right over there!</p>
+                <button>Sign up</button>
+            </div>
         </div>
     </div>
     <!--Footer section-->
